--- a/doom-client/src/main/resources/templates/doom.html
+++ b/doom-client/src/main/resources/templates/doom.html
@@ -6,8 +6,8 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
           integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous"/>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
             crossorigin="anonymous"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
             integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
@@ -35,13 +35,17 @@
                 <td>Health:</td>
                 <td th:text="${state.player.health}"></td>
             </tr>
+            <tr>
+                <td>Ammo:</td>
+                <td th:text="${state.player.shotgunAmmo}"></td>
+            </tr>
         </table>
     </div>
     <h3>Demons</h3>
     <div class="row">
         <div th:each="demon : ${state.demonList}" class="col-md-1">
             Demon <span th:text="${demon.id}"/>
-            <img th:if="${demon.health} &gt; 0" src="imp-face.png" width="80" class="demon-img" data-demonid="4"/>
+            <img th:if="${demon.health} &gt; 0" src="imp-face.png" width="80" class="demon-img" th:attr="data-demonid=${demon.id}"/>
             <img th:if="${demon.health} &lt;= 0" src="imp-dead.png" width="80"/>
             <span th:text="${demon.health}"/>
         </div>
